# Minimal-ModernOpenGL

./: .gitignore  CMakeLists.txt  Readme.md  build_and_run.sh  install_dependencies.sh
.github/workflows/: ci.yml
include/: glslprogram.h  vertexarray.h
shaders/: simple.vert
src/: glslprogram.cpp  main.cpp  vertexarray.cpp
